<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/exercise4">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="47dp"
        android:layout_height="42dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="256dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/clave"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/lock" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="47dp"
        android:layout_height="42dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="192dp"
        android:contentDescription="@string/cuenta"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="@string/iniciar_sesi_n"
        android:textColor="#FF9800"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.797" />

    <EditText
        android:id="@+id/login_nombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:background="@drawable/borde"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:paddingTop="11dp"
        android:paddingEnd="15dp"
        android:paddingBottom="11dp"
        android:selectAllOnFocus="true"
        android:textColorHint="#787878"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.274" />

    <EditText
        android:id="@+id/login_contraseña"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:background="@drawable/borde"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/contrase_a"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingTop="11dp"
        android:paddingEnd="15dp"
        android:paddingBottom="11dp"
        android:selectAllOnFocus="true"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#787878"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.372" />


    <Button
        android:id="@+id/btnlogin_ingresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/btn_uno"
        android:backgroundTint="#F31414"
        android:enabled="true"
        android:onClick="onClick"
        android:paddingStart="140dp"
        android:paddingEnd="130dp"
        android:text="@string/ingresar"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.549" />

    <Button
        android:id="@+id/btnlogin_anonimo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="244dp"
        android:background="@drawable/btn_uno"
        android:backgroundTint="#FF9800"
        android:enabled="true"
        android:onClick="Principal"
        android:paddingStart="85dp"
        android:paddingEnd="70dp"
        android:text="@string/ingresar_an_nimamente"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnlogin_registrar"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_uno"
        android:onClick="Register"
        android:text="@string/a_n_no_tienes_una_cuenta_reg_strate"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.789" />

</androidx.constraintlayout.widget.ConstraintLayout>