<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/exercise4">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="47dp"
        android:layout_height="42dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="328dp"
        android:contentDescription="@string/clave"
        app:layout_constraintBottom_toBottomOf="@+id/campoPassword"
        app:layout_constraintEnd_toStartOf="@+id/campoNombre"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.473"
        app:srcCompat="@drawable/lock" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:background="@drawable/borde"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/contrase_a"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingTop="11dp"
        android:paddingEnd="15dp"
        android:paddingBottom="11dp"
        android:selectAllOnFocus="true"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#787878"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.448" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registro_de_usuario"
        android:textColor="#FF9800"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
<<<<<<< HEAD
        app:layout_constraintVertical_bias="0.105" />
=======
        app:layout_constraintVertical_bias="0.679" />
>>>>>>> 611a5804477fab2b47558463928a3e2db36c6108

    <EditText
        android:id="@+id/register_correo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:background="@drawable/borde"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:paddingTop="11dp"
        android:paddingEnd="15dp"
        android:paddingBottom="11dp"
        android:selectAllOnFocus="true"
        android:textColorHint="#787878"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.227" />

    <EditText
        android:id="@+id/register_nombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="444dp"
        android:autofillHints=""
        android:background="@drawable/borde"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/nombre"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:paddingTop="11dp"
        android:paddingEnd="15dp"
        android:paddingBottom="11dp"
        android:selectAllOnFocus="true"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#787878"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/campoCorreo" />

    <Button
        android:id="@+id/btnregister_registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/btn_uno"
        android:backgroundTint="#F31414"
        android:enabled="true"
        android:onClick="Login"
        android:paddingStart="140dp"
        android:paddingEnd="130dp"
        android:text="@string/reg_strate"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
<<<<<<< HEAD
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.603" />
=======
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/campoPassword"
        app:layout_constraintVertical_bias="0.225" />
>>>>>>> 611a5804477fab2b47558463928a3e2db36c6108

    <Button
        android:id="@+id/btnregister_anonimo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/btn_uno"
        android:backgroundTint="#FF9800"
        android:enabled="true"
        android:onClick="MainActivity"
        android:paddingStart="85dp"
        android:paddingEnd="85dp"
        android:text="@string/ingresar_an_nimamente"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
<<<<<<< HEAD
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.708" />
=======
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOpcionRegistro"
        app:layout_constraintVertical_bias="0.255" />
>>>>>>> 611a5804477fab2b47558463928a3e2db36c6108

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="47dp"
        android:layout_height="42dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="156dp"
        android:contentDescription="@string/correo"
        app:layout_constraintBottom_toBottomOf="@+id/campoCorreo"
        app:layout_constraintEnd_toStartOf="@+id/campoCorreo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/email" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="47dp"
        android:layout_height="42dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="244dp"
        android:contentDescription="@string/cuenta"
        app:layout_constraintBottom_toBottomOf="@+id/campoNombre"
        app:layout_constraintEnd_toStartOf="@+id/campoNombre"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.357"
        app:srcCompat="@drawable/user" />

</androidx.constraintlayout.widget.ConstraintLayout>